--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -26,6 +26,9 @@
     <None Update="Day5\starting-crates.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day6\challenge-input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
