--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -32,6 +32,12 @@
     <None Update="Day7\challenge-input.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Day8\challenge-input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Day9\challenge-input.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
